--- a/Pipfile
+++ b/Pipfile
@@ -6,11 +6,11 @@ verify_ssl = true
 [dev-packages]
 pytest = "*"
 pytest-cov = "*"
-pytest-xdist = "*"
 python-dotenv = "0.21.0"
+pytest-xdist = {extras = ["psutil"], version = "*"}
 
 [packages]
-scipy = ">=1.2.1,<=1.7.3"
+scipy = "*"
 numpy = "*"
 pandas = ">=1.2.4,<2"
 ftfy = ">=5.5.1"
