--- a/Pipfile
+++ b/Pipfile
@@ -6,14 +6,14 @@ verify_ssl = true
 [dev-packages]
 pytest = "*"
 pytest-cov = "*"
-python-dotenv = "0.21.0"
 pytest-xdist = {extras = ["psutil"], version = "*"}
+python-dotenv = "0.21.0"
 
 [packages]
 scipy = "*"
 numpy = "*"
 pandas = ">=1.2.4,<2"
-ftfy = ">=5.5.1"
+ftfy = "*"
 xmltodict = "*"
 lxml = "*"
 xlsxwriter = "*"
