Upgrade to Pandas version 2.1.3.
Lots of tests and some core code had to be updated.

--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ python-dotenv = "0.21.0"
 [packages]
 scipy = "*"
 numpy = "*"
-pandas = ">=1.2.4,<2"
+pandas = "*"
 ftfy = "*"
 xmltodict = "*"
 lxml = "*"
